--- a/app/assets/stylesheets/lead.new.css
+++ b/app/assets/stylesheets/lead.new.css
@@ -9,31 +9,41 @@ body.new-lead {
 
 .lead hgroup {
   background: url('layout/background_transparent_000_35.png');
-  margin-left: -500px;
-  padding: 15px;
+  margin: 50px 0 30px -500px;
+  padding: 20px;
   color: #FFF;
-}
-
-.lead h2,
-.lead h3,
-.lead h4 {
+  font-weight: bold;
   text-align: right;
+  text-shadow: 1px 1px 2px #000;
+}
+
+.lead h2 {
+  margin-bottom: 25px;
+  font-size: 5em;
+}
+
+.lead h3 {
+  margin-bottom: 25px;
+  font-size: 2.5em;
 }
 
 .lead h4 {
-  padding: 15px;
+  font-size: 1.8em;
+}
+
+.lead h5 {
+  position: absolute;
+}
+
+.lead form {
+  background: url('layout/background_transparent_000_70.png');
+  margin: 100px 0 30px 20px;
+  padding-top: 70px;
+  color: #FFF;
 }
 
 .lead fieldset {
-  background: url('layout/background_transparent_000_70.png');
-  margin-left: 13px;
   border: none;
-  color: #FFF;
-}
-
-.lead legend {
-  position: relative;
-  left: -20px;
 }
 
 .lead div {
@@ -42,12 +52,12 @@ body.new-lead {
 }
 
 .fields {
-  margin: 0 50px;
+  margin: 0 60px 40px;
 }
 
 .lead input {
   display: block;
-  margin: 30px 0;
+  margin-bottom: 30px;
 }
 
 .lead input:first-child {
@@ -62,6 +72,7 @@ body.new-lead {
 .lead input[type=submit] {
   position: relative;
   background: transparent url('layout/new_lead_call_to_action.png');
+  margin-bottom: 0;
   border: none;
   width: 285px;
   height: 50px;
@@ -89,7 +100,7 @@ body.new-lead {
   width: 490px;
 }
 
-.disclaimer h5 {
+.disclaimer h6 {
   font-size: 1.5em;
 }
 
