--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body_attributes, ' class="catalog"'.html_safe %>
 <header class="search">
 	<form action="/" method="get" class="container">
 		<h2>Encontre o que precisa em Valença</h2>
