--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -68,6 +68,7 @@ $(function(){
   loadFancyBox();
   Backbone.history.start();
 
+  $().UItoTop({easingType: 'easeOutQuart'});
   $('.addthis').show();
   $('.pagination').remove();
 
