--- a/app/assets/stylesheets/lead.new.css
+++ b/app/assets/stylesheets/lead.new.css
@@ -12,6 +12,7 @@ body.new-lead {
   margin: 50px 0 30px -500px;
   padding: 20px;
   color: #FFF;
+  font-family: 'Bariol', 'Open Sans', sans-serif;
   font-weight: bold;
   text-align: right;
   text-shadow: 1px 1px 2px #000;
@@ -19,16 +20,17 @@ body.new-lead {
 
 .lead h2 {
   margin-bottom: 25px;
-  font-size: 5em;
+  font-size: 5.5em;
+  line-height: 1em;
 }
 
 .lead h3 {
   margin-bottom: 25px;
-  font-size: 2.5em;
+  font-size: 3em;
 }
 
 .lead h4 {
-  font-size: 1.8em;
+  font-size: 2em;
 }
 
 .lead h5 {
