--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta property="og:image" content="<%= og_image yield(:og_image) %>" />
     <%= csrf_meta_tag %>
     <%= favicon_link_tag %>
-    <%= stylesheet_link_tag 'fonts/open_sans' %>
+    <%= stylesheet_link_tag 'fonts/all' %>
     <%= stylesheet_link_tag 'application' %>
     <!--[if lt IE 9]><%= javascript_include_tag 'html5' %><![endif]-->
   </head>
