--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -11,8 +11,11 @@
     <fieldset>
       <div class="fields">
         <input type="text" placeholder="Nome da Sua Empresa" />
+        <small>Este campo deve ser preenchido</small>
         <input type="text" placeholder="Seu Nome" />
+        <small>Este campo deve ser preenchido</small>
         <input type="text" placeholder="seu@email.com" />
+        <small>Utilize este formato: seu@email.com</small>
         <input type="submit" value="Quero Experimentar »" />
       </div>
       <div class="disclaimer">
