--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <nav>
             <ul>
               <li><%= link_to 'Página Inicial', root_path, title: 'Voltar à página inicial' %></li>
-              <li><%= link_to 'Anuncie Grátis', new_leads_path, title: '30 dias sem compromisso para experimentar' %></li>
+              <li><%= link_to 'Anuncie Grátis', new_lead_path, title: '30 dias sem compromisso para experimentar' %></li>
               <li><%= link_to 'Ajuda', 'javascript:void(0)', title: 'Visitar seção de ajuda' %></li>
               <li><%= default_contact_email %></li>
             </ul>
