--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -2,12 +2,20 @@
 <div class="header-lead"></div>
 <div class="container lead main-content">
   <hgroup>
+    <% if request.path.split('/').last != 'sabia-decisao' -%>
     <h2>As pessoas<br />querem te ver.</h2>
     <h3>Em qualquer lugar. A qualquer hora.</h3>
     <h4>Anuncie em nosso catálogo e seja encontrado pelo seu<br />público, inclusive através do Google e do Facebook.</h4>
+    <% else -%>
+    <h2>Sábia decisão!</h2>
+    <h3>Iremos entrar em contato com você para tirar<br />todas as suas dúvidas e prosseguir com a<br />criação da sua página em nosso catálogo.</h3>
+    <h4>Enquanto isso, assista à um vídeo!<br />Achamos incrível e por isso decidimos<br />compartilhar com você.</h4>
+    <%= link_to 'Quero assistir agora!', 'http://www.youtube.com/watch?v=XRCIzZHpFtY', title: 'Assistir ao vídeo no Youtube', class: 'call-to-action' %>
+    <% end -%>
   </hgroup>
+  <% if request.path.split('/').last != 'sabia-decisao' -%>
   <h5><%= image_tag('layout/new_lead_form_legend.png', alt: 'Apenas R$49,00 por mês! Experimente grátis sem compromisso por 30 dias.') %></h5>
-  <form action="#">
+  <form action="">
     <fieldset>
       <div class="fields">
         <input type="text" placeholder="Nome da Sua Empresa" />
@@ -16,7 +24,7 @@
         <small>Este campo deve ser preenchido</small>
         <input type="text" placeholder="seu@email.com" />
         <small>Utilize este formato: seu@email.com</small>
-        <input type="submit" value="Quero Experimentar »" />
+        <input type="submit" value="Quero Experimentar »" class="call-to-action" />
       </div>
       <div class="disclaimer">
         <h6>Está com dúvidas?</h6>
@@ -26,4 +34,5 @@
       </div>
     </fieldset>
   </form>
+  <% end -%>
 </div>
