--- a/app/assets/stylesheets/lead.new.css
+++ b/app/assets/stylesheets/lead.new.css
@@ -81,7 +81,7 @@ body.new-lead {
   color: #F66;
 }
 
-.lead input[type=submit] {
+.lead .call-to-action {
   position: relative;
   background: transparent url('layout/new_lead_call_to_action.png');
   margin-bottom: 0;
@@ -95,17 +95,34 @@ body.new-lead {
   text-transform: uppercase;
 }
 
-.lead input[type=submit]:hover {
+.lead .call-to-action:hover {
   background-position: left -50px;
   cursor: pointer;
 }
 
-.lead input[type=submit]:active {
+.lead .call-to-action:active {
   background-position: left -100px;
   outline: none;
   top: 1px;
   left: 1px;
   text-shadow: none;
+}
+
+.lead a.call-to-action {
+  margin-top: 25px;
+  padding-top: 12px;
+  height: 38px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
+
+.lead a.call-to-action,
+.lead a.call-to-action:active,
+.lead a.call-to-action:visited,
+.lead a.call-to-action:hover {
+  color: #FFF;
+  text-decoration: none;
 }
 
 .disclaimer {
