--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -7,9 +7,9 @@
     <h3>Em qualquer lugar. A qualquer hora.</h3>
     <h4>Anuncie em nosso catálogo e seja encontrado pelo seu<br />público, inclusive através do Google e do Facebook.</h4>
     <% else -%>
-    <h2>Sábia decisão!</h2>
-    <h3>Iremos entrar em contato com você para tirar<br />todas as suas dúvidas e prosseguir com a<br />criação da sua página em nosso catálogo.</h3>
-    <h4>Enquanto isso, assista à um vídeo!<br />Achamos incrível e por isso decidimos<br />compartilhar com você.</h4>
+    <h2>Sábia decisão :D</h2>
+    <h3>Iremos entrar em contato com você para tirar<br />todas as suas dúvidas sobre nosso catálogo.</h3>
+    <h4>Enquanto isso, assista ao vídeo<br />incrível que separamos para você.</h4>
     <%= link_to 'Quero assistir agora!', 'http://www.youtube.com/watch?v=XRCIzZHpFtY', title: 'Assistir ao vídeo no Youtube', class: 'call-to-action' %>
     <% end -%>
   </hgroup>
