view to create lead

--- a/app/views/leads/effectived.html.erb
+++ b/app/views/leads/effectived.html.erb
@@ -4,7 +4,7 @@
   <hgroup>
     <h2>Sábia decisão :D</h2>
     <h3>Iremos entrar em contato com você para tirar<br />todas as suas dúvidas sobre nosso catálogo.</h3>
-    <h4>Enquanto isso, assista ao vídeo<br />incrível que separamos para você.</h4>
+    <h4>Enquanto isso, assista a um vídeo<br />incrível que separamos para você.</h4>
     <%= link_to 'Quero assistir agora!', 'http://www.youtube.com/watch?v=XRCIzZHpFtY', title: 'Assistir ao vídeo no Youtube', class: 'call-to-action' %>
   </hgroup>
 </div>
