--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,7 @@ a.inverse:hover {
 }
 
 header, footer {
+  min-width: 980px;
   color: #FFF;
   text-shadow: 1px 1px 2px #000;
 }
@@ -102,8 +103,7 @@ nav li {
 }
 
 footer {
-  background-image: url('layout/background_footer.png');
-  background-repeat: repeat-x;
+  background: url('layout/background_footer.png') repeat-x;
   position: absolute;
   bottom: 0;
   padding: 0;
