--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_attributes, ' class="new-lead"'.html_safe %>
-<div class="header-lead"></div>
+<header class="lead"></header>
 <div class="container lead main-content">
   <hgroup>
     <h2>As pessoas<br />querem te ver.</h2>
