customize page titles

--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,4 +1,7 @@
-<% content_for :body_attributes, ' class="new-lead"'.html_safe %>
+<%
+  content_for :title, 'Experimente grátis sem compromisso por 30 dias'
+  content_for :body_attributes, ' class="new-lead"'.html_safe
+%>
 <header class="lead"></header>
 <div class="container lead main-content">
   <hgroup>
@@ -19,7 +22,7 @@
         <h6>Está com dúvidas?</h6>
         <p>Neste momento, tudo que precisamos são seus dados básicos para que possamos lhe enviar mais informações e esclarecer todas as suas dúvidas.</p>
         <p>Lembre-se que você não terá nenhum compromisso ao enviar tais informações. Você pode desistir de anunciar conosco a qualquer momento sem nenhum tipo de taxa extra ou multa.</p>
-        <p>Se preferir, você pode visitar nossa <%= link_to 'seção de ajuda', 'javascript:void(0)', title: 'Visitar seção de ajuda', class: 'inverse' %> ou navegar pelo <%= link_to 'catálogo', root_path, title: 'Navegar pelo catálogo', class: 'inverse' %>. Queremos que você se sinta à vontade e seguro.</p>
+        <p>Se preferir, você pode visitar nossa <%= link_to 'seção de ajuda', questions_path, title: 'Visitar seção de ajuda', class: 'inverse' %> ou navegar pelo <%= link_to 'catálogo', root_path, title: 'Navegar pelo catálogo', class: 'inverse' %>. Queremos que você se sinta à vontade e seguro.</p>
       </div>
     </fieldset>
   <% end %>
