--- a/app/views/leads/effectived.html.erb
+++ b/app/views/leads/effectived.html.erb
@@ -1,4 +1,7 @@
-<% content_for :body_attributes, ' class="new-lead"'.html_safe %>
+<%
+  content_for :title, 'Sábia decisão :D'
+  content_for :body_attributes, ' class="new-lead"'.html_safe
+%>
 <header class="lead"></header>
 <div class="container lead main-content">
   <hgroup>
