change addthis partial place

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -8,7 +8,7 @@
 				<%= image_submit_tag 'layout/zoom_tool.png', alt: 'Encontrar', id: 'submit-search' %>
 			</span>
 		</div>
-		<%= render 'addthis' %>
+		<%= render './addthis' %>
 	</form>
 </header>
 <div class="container search main-content">
