--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -8,7 +8,7 @@
 <header class="company">
   <div class="container">
     <%= render 'header' %>
-    <%= render 'addthis' %>
+    <%= render './addthis' %>
   </div>
 </header>
 <div class="container company main-content">
