--- a/spec/fixtures/home.html.erb
+++ b/spec/fixtures/home.html.erb
@@ -1,6 +1,6 @@
 <header class="company">
   <div class="container">
     <%= render 'header' %>
-    <%= render 'addthis' %>
+    <%= render './addthis' %>
   </div>
 </header>
