hide questions layout link

--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -22,7 +22,7 @@
         <h6>Está com dúvidas?</h6>
         <p>Neste momento, tudo que precisamos são seus dados básicos para que possamos lhe enviar mais informações e esclarecer todas as suas dúvidas.</p>
         <p>Lembre-se que você não terá nenhum compromisso ao enviar tais informações. Você pode desistir de anunciar conosco a qualquer momento sem nenhum tipo de taxa extra ou multa.</p>
-        <p>Se preferir, você pode visitar nossa <%= link_to 'seção de ajuda', questions_path, title: 'Visitar seção de ajuda', class: 'inverse' %> ou navegar pelo <%= link_to 'catálogo', root_path, title: 'Navegar pelo catálogo', class: 'inverse' %>. Queremos que você se sinta à vontade e seguro.</p>
+        <p>Nós queremos que você se sinta à vontade e seguro. Se preferir, continue navegando pelo <%= link_to 'catálogo', root_path, title: 'Navegar pelo catálogo', class: 'inverse' %>.</p>
       </div>
     </fieldset>
   <% end %>
