--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -1,4 +1,4 @@
 User-Agent: *
 Disallow: /admin/
-Disallow: /anunciar-gratis-por-30-dias/sabia-decisao
+Disallow: <%= effectived_lead_path %>
 Sitemap: <%= root_url[0..-2] + sitemap_path(format: :xml) %>
