--- a/app/assets/stylesheets/company.show.css.erb
+++ b/app/assets/stylesheets/company.show.css.erb
@@ -1,5 +1,5 @@
 header.company {
-	background: url('layout/background_header_company.png') repeat-x;
+	background: url('<%= image_path('layout/background_header_company.png') %>') repeat-x;
   height: 101px;
 }
 
@@ -20,7 +20,7 @@ header.company .addthis {
 
 aside {
 	float: right;
-  background: #F9F9F9 url('layout/background_body.png');
+  background: #F9F9F9 url('<%= image_path('layout/background_body.png') %>');
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
