--- a/app/assets/stylesheets/jquery.uitotop.css.erb
+++ b/app/assets/stylesheets/jquery.uitotop.css.erb
@@ -16,11 +16,11 @@
   height:51px;
   border:none;
   text-indent:100%;
-  background:url(layout/uitotop.png) no-repeat left top;
+  background:url('<%= image_path('layout/uitotop.png') %>') no-repeat left top;
 }
 
 #toTopHover {
-  background:url(layout/uitotop.png) no-repeat left -51px;
+  background:url('<%= image_path('layout/uitotop.png') %>') no-repeat left -51px;
   width:51px;
   height:51px;
   display:block;
