add link to fix phone number

--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -126,6 +126,13 @@ header.search input[type=text] {
   font-size: 1em;
 }
 
+.result p.phone a {
+  position: relative;
+  top: -1px;
+  font-size: .8em;
+  font-weight: normal;
+}
+
 .result p.tags {
   font-size: .9em;
   font-weight: normal;
