--- a/app/views/companies/_search_results.html.erb
+++ b/app/views/companies/_search_results.html.erb
@@ -5,7 +5,7 @@
 				<%= link_to image_tag('layout/see_details.png', alt: 'Ver detalhes'), company_path(company.username), title: "Ver detalhes de #{company.name}", class: 'see-details' if company.have_page? %>
 				<div class="data">
 					<p class="name"><%= company.name %></p>
-					<p class="phone"><%= company.phone %></p>
+					<p class="phone"><%= company.phone %> - <a href="#" class="inverse">Corrigir Telefone</a></p>
 					<p class="address"><%= company.address %></p>
 					<p class="tags">
 						<%= company.segments %>
