--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -127,6 +127,7 @@ header.search input[type=text] {
 }
 
 .result p.phone a {
+  display: none;
   position: relative;
   top: -1px;
   font-size: .8em;
