--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -76,4 +76,8 @@ $(function(){
 
   $.imgpreload('<%= image_path('layout/background_new_lead.jpg') %>');
 
+  $('span.test').live('click', function(){
+    console.log($(this).closest('li').data('id'))
+  })
+
 });
