--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
       </footer>
     </div>
     <%= render './metrics' %>
+    <%= render './templates' %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
