--- a/app/views/_templates.html.erb
+++ b/app/views/_templates.html.erb
@@ -1,5 +1,6 @@
-<templates style="display: none">
-  <div id="fix-phone">    
-    <span class="test">Template Test</span>
+<templates>
+  <div id="fix-phone">
+    <input type="text" class="fix-sugestion" />
+    <button class="fix-submit">Sugerir Correção</button>
   </div>
 </templates>
