--- a/app/views/companies/_search_results.html.erb
+++ b/app/views/companies/_search_results.html.erb
@@ -6,7 +6,7 @@
 				<div class="data">
 					<p class="name"><%= company.name %></p>
 					<p class="phone">
-						<%= company.phone %> <a href="#" rel="popover" class="inverse">Corrigir Telefone</a>
+						<%= company.phone %> <a href="#" rel="popover" class="inverse">Corrigir</a>
 					</p>
 					<p class="address"><%= company.address %></p>
 					<p class="tags">
