--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -134,6 +134,40 @@ header.search input[type=text] {
   font-weight: normal;
 }
 
+.fix-sugestion {
+  margin-bottom: 10px;
+  width: 196px;
+  font-size: 1em !important;
+}
+
+.fix-submit {
+  position: relative;
+  background: transparent url('<%= image_path('layout/fix_submit.png') %>');
+  left: -1px;
+  margin-bottom: 0;
+  border: none;
+  width: 212px;
+  height: 35px;
+  color: #FFF;
+  font-size: .9em;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px #000;
+  text-transform: uppercase;
+}
+
+.fix-submit:hover {
+  background-position: left -35px;
+  cursor: pointer;
+}
+
+.fix-submit:active {
+  background-position: left -70px;
+  outline: none;
+  top: 1px;
+  left: 0px;
+  text-shadow: none;
+}
+
 .result p.tags {
   font-size: .9em;
   font-weight: normal;
