--- a/app/views/_templates.html.erb
+++ b/app/views/_templates.html.erb
@@ -1,6 +1,13 @@
 <templates>
-  <div id="fix-phone">
-    <input type="text" class="fix-sugestion" />
-    <button class="fix-submit">Sugerir Correção</button>
-  </div>
+  <template id="fix-phone">
+    <div class="fix-phone">
+      <p>Digite o número correto no campo abaixo e clique em 'Sugerir Correção'. Caso não saiba o número, deixe o campo em branco e apenas clique no botão.</p>
+      <input type="text" />
+      <button>Sugerir Correção</button>
+    </div>
+  </template>
+  <template id="fix-phone-thanks">
+    <p><strong>Obrigado por colaborar!</strong></p>
+    <p>Vamos conferir o número e atualizaremos o mais breve possível.</p>
+  </template>
 </templates>
