--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -76,11 +76,13 @@ $(function(){
 
   $.imgpreload('<%= image_path('layout/background_new_lead.jpg') %>');
 
-  $('.fix-submit').live('click', function(){
-    var fixSugestion = {
+  $('.fix-phone button').live('click', function(){
+    var fixPhone = {
       id:    $(this).closest('li').data('id'),
       phone: $(this).prev().val() };
 
+    $(this).parent().slideUp('high', function(){
+      $(this).empty().append($('#fix-phone-thanks').html()).slideDown('high') })
     
   })
 
