--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -139,6 +139,14 @@ header.search input[type=text] {
   font-size: .9em;
 }
 
+.fix-phone .thanks strong {
+  color: #56911B;
+}
+
+.fix-phone .error strong {
+  color: #F00;
+}
+
 .fix-phone input {
   margin: 10px 0;
   width: 196px;
