interacting with controller

--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -139,7 +139,7 @@ header.search input[type=text] {
   font-size: .9em;
 }
 
-.fix-phone .thanks strong {
+.fix-phone .success strong {
   color: #56911B;
 }
 
