--- a/app/views/_templates.html.erb
+++ b/app/views/_templates.html.erb
@@ -1,5 +1,5 @@
 <templates>
-  <template id="fix-phone">
+  <template id="fix-phone-sugestion">
     <div class="fix-phone">
       <div class="sugestion">
         <p>Digite o número correto no campo abaixo e clique em 'Sugerir Correção'. Caso não saiba o número, deixe o campo em branco e apenas clique no botão.</p>
@@ -8,8 +8,8 @@
       </div>
     </div>
   </template>
-  <template id="fix-phone-thanks">
-    <div class="thanks">
+  <template id="fix-phone-success">
+    <div class="success">
       <p><strong>Obrigado por colaborar :-)</strong></p>
       <p>Vamos conferir o número e se for o caso, atualizaremos o mais breve possível.</p>
       <button>Ok, Obrigado</button>
