fix js replication bug

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -68,6 +68,7 @@ $(function(){
   checkPlaceHolders();
   loadFancyBox();
   loadPopovers();
+  loadFixPhone();
   Backbone.history.start();
 
   $().UItoTop({easingType: 'easeOutQuart'});
