fix height bug in the popover

--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -134,6 +134,10 @@ header.search input[type=text] {
   font-weight: normal;
 }
 
+.popover-content {
+  height: 188px;
+}
+
 .fix-phone p {
   width: 196px;
   font-size: .9em;
