added spin to fix phone sugestion

--- a/app/assets/stylesheets/company.index.css.erb
+++ b/app/assets/stylesheets/company.index.css.erb
@@ -185,6 +185,11 @@ header.search input[type=text] {
   text-shadow: none;
 }
 
+.fix-phone .spin-container {
+  width: 208px;
+  height: 35px;
+}
+
 .result p.tags {
   font-size: .9em;
   font-weight: normal;
