--- a/app/views/_templates.html.erb
+++ b/app/views/_templates.html.erb
@@ -4,7 +4,9 @@
       <div class="sugestion">
         <p>Digite o número correto no campo abaixo e clique em 'Sugerir Correção'. Caso não saiba o número, deixe o campo em branco e apenas clique no botão.</p>
         <input type="text" />
-        <button>Sugerir Correção</button>
+        <div class="spin-container">
+          <button>Sugerir Correção</button>
+        </div>
       </div>
     </div>
   </template>
