--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       <footer>
         <div class="container">
           <%= link_to image_tag('layout/logo1.png', alt: page_title), root_path, title: page_title, class: 'logo' %>
-          <%= link_to 'who', 'http://bazzarella.com', target: '_blank', title: 'Felipe Bazzarella', class: 'who' %>
+          <%= link_to 'bazzarella', 'http://bazzarella.com', target: '_blank', title: 'bazzarella', class: 'who' %>
         </div>
       </footer>
     </div>
