--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -12,9 +12,11 @@
 	</form>
 </header>
 <div class="container search main-content">
+	<!--
 	<p id="display">
-		<strong>Grátis por 30 dias!</strong> Tenha uma página em nosso catálogo e conquiste mais clientes para sua empresa. <%= link_to 'Saiba mais', new_lead_path, title: 'Saber mais sobre como anunciar', class: 'inverse' %>.
+		<strong>Grátis por 30 dias!</strong> Tenha uma página em nosso catálogo e conquiste mais clientes para sua empresa. <%#= link_to 'Saiba mais', new_lead_path, title: 'Saber mais sobre como anunciar', class: 'inverse' %>.
 	</p>
+	-->
 	<%= render 'search_results' %>
 	<%= paginate @companies, window: 2 %>
 </div>
